cnd.modelimpl/test/unit/data/goldenfiles/org/netbeans/modules/cnd/modelimpl/trace/FileModel3Test/lexer_dots_at_eval.cc.clank.err
/export/devarea/cnd-main/cnd.modelimpl/build/test/unit/data/org/netbeans/modules/cnd/modelimpl/trace/FileModel3Test/lexer_dots_at_eval.cc:1:7: error: remainder by zero in preprocessor expression
#if 1 % 0
    ~ ^ ~
/export/devarea/cnd-main/cnd.modelimpl/build/test/unit/data/org/netbeans/modules/cnd/modelimpl/trace/FileModel3Test/lexer_dots_at_eval.cc:1:7: error: remainder by zero in preprocessor expression
#if 1 % 0
    ~ ^ ~
